panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__call__test_standard_lib_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_standard_lib_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (declaration (isalnum~1 `fn(∅: int) -> int` (static isalnum)) ∅)
         (return
            (not-equal `int` @0
               (call `int` @0
                  (addressof `ptr<fn(∅: int) -> int>` @8
                     (isalnum~1 `fn(∅: int) -> int` (static isalnum)))
                  (100 `int` @16))
               (0 `int` @20))))))

----- stderr -----
